# gem5-SALAM-dev

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  SConstruct  TEST_RESULTS.md  generateHW.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_gemm.sh  systemValidation.sh  test_results.json  test_stats_fix.py
.github/workflows/: ci.yml  nightly.yml
SALAM-Configurator/: _DIR.md  fs_template.py  fs_template_old.py  parser.py  systembuilder.py  validate_generation.py
benchmarks/: README.md
benchmarks/common/: Makefile
benchmarks/comprehensive_test/: README.md  _DIR.md  config.yml  (+5 more)
docs/: .readthedocs.yaml  ARCHITECTURE.md  ASSERTION_ANALYSIS.md  BENCHMARKS.md  CHANGELOG.md  DEBUGGING.md  DEBUG_FLAGS.md  Doxyfile.salam  GENERATION.md  Makefile  README.md  TESTING_SALAM.md  TROUBLESHOOTING.md  UBUNTU_24.04_BUILD.md  changelog.rst  conf.py  index.html  index.rst  requirements.txt
gem5-SALAM-gui/: README.md  cli.py  installer.py  optional_dependencies.txt  requirements.txt  run_installer.bat  test_gui.py
md_grid_debug2/: md_debug3.txt
md_grid_debug3/: config.json  md_debug4.txt
md_grid_dma/: config.ini  dma_debug.txt
md_grid_fixed/: system.terminal
md_grid_test/: config.dot  system.terminal
salam-core/: README.md
salam_config/: __init__.py  cli.py
scripts/: _DIR.md  build-all.sh  generate_docs.py  generate_docs.sh  git_backup.sh  install.sh  run_debug.sh  run_tests.py  run_valgrind.sh  test-all.sh  test_stats_harness.py  verify-install.sh
src/: SConscript
tests/: TEST_RESULTS.md  test_results.json
(+358 files in other folders)
